# stellar-confidential-token

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  skills-lock.json  vercel.json
.cursor/: mcp.json
.cursor/plans/: confidential_token_option_a_c6aa55a1.plan.md
.cursor/rules/: stellar-zk-hackathon.mdc
.cursor/skills/: SKILL_ROUTER.md
.cursor/skills/advanced-elicitation/: SKILL.md
.cursor/skills/brainstorming/: SKILL.md  workflow.md
.cursor/skills/bri-tech-writer/: SKILL.md  customize.toml
confidential-token/: Cargo.toml  README.md
confidential-token/contracts/confidential-token/: Cargo.toml
confidential-token/contracts/confidential-token/src/: crypto.rs  lib.rs
confidential-token/contracts/registrar/: Cargo.toml
confidential-token/contracts/registrar/src/: lib.rs
confidential-token/contracts/verifier-registration/: Cargo.toml
confidential-token/contracts/verifier-registration/src/: lib.rs
confidential-token/contracts/verifier-transfer/: Cargo.toml
confidential-token/contracts/verifier-transfer/src/: lib.rs
confidential-token/contracts/verifier-withdraw/: Cargo.toml
confidential-token/contracts/verifier-withdraw/src/: lib.rs
confidential-token/crates/baby-jubjub/: Cargo.toml
confidential-token/crates/baby-jubjub/src/: curve.rs  field.rs  lib.rs
confidential-token/crates/eerc-types/: Cargo.toml
confidential-token/crates/eerc-types/src/: lib.rs
docs/: architecture.md  deployment.md  submission.md
scripts/: _derive-pubkey.ts  deploy-testnet.sh  fund-conf.sh  issue-test-asset.sh  redeploy-token-only.sh  set-auditor.sh
(+107 files in other folders)
