[workspace]
resolver = "2"
members = [
    "crates/baby-jubjub",
    "crates/eerc-types",
    "contracts/verifier-registration",
    "contracts/verifier-transfer",
    "contracts/verifier-withdraw",
    "contracts/registrar",
    "contracts/confidential-token",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
publish = false

[workspace.dependencies]
soroban-sdk = "26"
baby-jubjub = { path = "crates/baby-jubjub" }
eerc-types = { path = "crates/eerc-types" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
